fixed color header__menu & header__toggle, when dark mode active

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -33,7 +33,7 @@
 /* ===== HEADER SECTION ===== */
 @media screen and (max-width: 767px) {
   .header__menu {
-    @apply fixed w-[80%] top-28 left-0 right-0 mx-auto text-center p-8 bg-gray-100 shadow-[0_0_12px_rgba(0,0,0,0.1)] transition-all duration-300 opacity-0 scale-y-0 origin-top;
+    @apply fixed w-[80%] top-28 left-0 right-0 mx-auto text-center p-8 bg-gray-100 shadow-[0_0_12px_rgba(0,0,0,0.1)] transition-all duration-300 opacity-0 scale-y-0 origin-top dark:bg-gray-800;
   }
 }
 .header__link {
